packages/tree-sitter-ccl/test/corpus/basic.txt
================================================================================
Basic key-value pairs
================================================================================

name = John Doe
age = 30
active = true

--------------------------------------------------------------------------------

(document
  (newline)
  (entry
    (single_line_key)
    (assignment)
    (single_line_value))
  (newline)
  (entry
    (single_line_key)
    (assignment)
    (single_line_value))
  (newline)
  (entry
    (single_line_key)
    (assignment)
    (single_line_value))
  (newline))

================================================================================
Empty key (list syntax)
================================================================================

= item1
= item2
= item3

--------------------------------------------------------------------------------

(document
  (newline)
  (entry
    (assignment)
    (single_line_value))
  (newline)
  (entry
    (assignment)
    (single_line_value))
  (newline)
  (entry
    (assignment)
    (single_line_value))
  (newline))

================================================================================
Empty value
================================================================================

empty_key =

--------------------------------------------------------------------------------

(document
  (newline)
  (entry
    (single_line_key)
    (assignment))
  (newline))

================================================================================
Key and value only
================================================================================

key_only =
= value_only

--------------------------------------------------------------------------------

(document
  (newline)
  (entry
    (single_line_key)
    (assignment))
  (newline)
  (entry
    (assignment)
    (single_line_value))
  (newline))
